# Rig

./: .gitignore  README.md  pyproject.toml
rig/: bridge.py  bridge_client.py  main.py  parser.py  prompt_builder.py  start_bridge.py  stop_bridge.py
rig/actions/: write.py
rig/commands/: add.py  drop.py  files.py
rig/mode/: ask.py  coding.py  manager.py
rig/protocol/: registry.py
rig/response/: ask.py  projectmap.py  read.py
rig/service/: dispatcher.py  file_system.py  parser.py  project_map.py  prompt_builder.py  validator.py
rig/ui/: cli.py
