[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rig"
version = "0.1.0"
description = "Transparent AI-powered terminal IDE"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "requests>=2.34.2",
    "rich>=15.0.0",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "playwright>=1.59.0",
]

[project.scripts]
rig = "rig.main:main"
